--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nest-app",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Training app to learn nest",
+  "author": "Ahmed Tariq",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "config": "^3.3.9",
+    "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -30,6 +32,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/config": "^3.3.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
